--- a/SQLiteRepositoryDemo/SQLiteRepositoryDemo.Android/SQLiteRepositoryDemo.Android.csproj
+++ b/SQLiteRepositoryDemo/SQLiteRepositoryDemo.Android/SQLiteRepositoryDemo.Android.csproj
@@ -64,7 +64,7 @@
     <PackageReference Include="Xamarin.Android.Support.v4" Version="25.4.0.2" />
     <PackageReference Include="Xamarin.Android.Support.v7.CardView" Version="25.4.0.2" />
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="25.4.0.2" />
-    <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.168-pre" />
+    <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.362" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
