--- a/SQLiteRepositoryDemo/SQLiteRepositoryDemo.UWP/SQLiteRepositoryDemo.UWP.csproj
+++ b/SQLiteRepositoryDemo/SQLiteRepositoryDemo.UWP/SQLiteRepositoryDemo.UWP.csproj
@@ -124,12 +124,12 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.9" />
     <PackageReference Include="SQLiteRepository">
       <Version>1.2.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
-    <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.168-pre" />
+    <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.362" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SQLiteRepositoryDemo\SQLiteRepositoryDemo.csproj">
