--- a/SQLiteRepositoryDemo/SQLiteRepositoryDemo.iOS/SQLiteRepositoryDemo.iOS.csproj
+++ b/SQLiteRepositoryDemo/SQLiteRepositoryDemo.iOS/SQLiteRepositoryDemo.iOS.csproj
@@ -125,7 +125,7 @@
       <Version>1.2.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
-    <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.168-pre" />
+    <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.362" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SQLiteRepositoryDemo\SQLiteRepositoryDemo.csproj">
