--- a/SQLiteRepositoryDemo/SQLiteRepositoryDemo/SQLiteRepositoryDemo.csproj
+++ b/SQLiteRepositoryDemo/SQLiteRepositoryDemo/SQLiteRepositoryDemo.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <PackageReference Include="SQLiteRepository" Version="1.2.1" />
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
-    <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.168-pre" />
+    <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.362" />
   </ItemGroup>
 
   <ItemGroup>
